Contrast colors fix for try button and focus selection (#1239)

--- a/src/themes/designer/styles/variables.scss
+++ b/src/themes/designer/styles/variables.scss
@@ -25,7 +25,7 @@ $toolbox-background: #fff;
 $toolbox-btn-size: 45px;
 $toolbox-btn-padding: 5px;
 $toolbox-btn-active-bg: #F9FBFC;
-$toolbox-btn-active-border: #96989A;
+$toolbox-btn-active-border: #767676;
 $toolbox-border-radius: 10px;
 $toolbox-padding: 8px;
 
